<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_orange_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_orange_24dp"
        android:title="@string/title_map"/>

    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_review_orange_24dp"
        android:title="@string/title_review"/>

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_heart_orange_24dp"
        android:title="@string/title_friends"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_orange_24dp"
        android:title="@string/title_profile"/>

</menu>