...
                    android:text="@string/no_likes"
                    android:textColor="@color/orange"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/photosContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"/>

        </LinearLayout>
...
